<resources>
    <string name="opsi_1">Opsi 1</string>
    <string name="opsi_2">opsi_2</string>
    <string name="opsi_3">opsi_3</string>
    <string name="opsi_4">opsi_4</string>
    <string name="_1_istilah_korupsi_berasal_dari_bahasa_latin_yaitu_corruptio_yang_artinya">1. Istilah korupsi berasal dari bahasa latin yaitu ‘corruptio’ yang artinya ...</string>
    <string name="ulang_tes">Ulang Tes</string>
    <string name="total_soal_10">TOTAL SOAL : 10</string>
    <string name="pertanyaan">pertanyaan</string>
    <string name="next">Next</string>
    <string name="pengetahuan_dasar">Pengetahuan Dasar</string>
    <string name="app_name">JustiFY_Testing</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="faq">FAQ</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="jawaban">jawaban</string>
    <string name="permainan">Permainan</string>
    <string name="pengdas">Pengetahuan Dasar</string>
    <string name="pilihan_ganda">Pilihan Ganda</string>
    <string name="tebak_kata">Tebak Kata</string>
    <string name="pil_gan">Pilihan Ganda</string>
    <string name="total_soal">TOTAL SOAL : 10</string>
    <string name="soal">Soal</string>
    <string name="opsi_a">Opsi A</string>
    <string name="opsi_b">Opsi B</string>
    <string name="opsi_c">Opsi C</string>
    <string name="opsi_d">Opsi D</string>
    <string name="ulang_permainan">Ulang Permainan</string>
    <string name="faq_list">FAQ</string>
    <string name="description">Description</string>

    <string name="uu">Undang - Undang</string>
    <string name="berita">Berita</string>
    <string name="kasus">Penerimaan Gratifikasi Oleh Oknum</string>
    <string name="imbalan">Pelapor Kasus Dapat 200 juta</string>
    <string-array name="menu">
        <item>Video</item>
        <item>Artikel</item>
        <item>Undang-Undang</item>
        <item>Berita</item>
    </string-array>
    <string-array name="listuu">
        <item></item>
    </string-array>
    <string name="uu1">Undang-Undang Nomor 20 Tahun 2001 tentang Perubahan Atas Undang-Undang Nomor
        31 Tahun 1999 tentang Pemberantasan Tindak Pidana Korupsi</string>
    <string name="det_uu1">Undang-Undang ini mengatur perubahan terhadap UU sebelumnya (UU No. 31/1999)
        dan memberikan dasar hukum bagi pemberantasan tindak pidana korupsi di Indonesia. UU ini mencakup
        definisi, jenis-jenis tindak pidana korupsi, serta sanksi yang dapat diterapkan.
        \n\nUntuk lebih lengkapnya kunjungi link berikut ini. <a href = "https://peraturan.bpk.go.id/Details/44900/uu-no-20-tahun-2001">UU No.20 Tahun 2001</a>
    </string>
    <string name="uu2">Undang-Undang Nomor 30 Tahun 2002 tentang Komisi Pemberantasan Tindak Pidana
        Korupsi (KPK)</string>
    <string name="det_uu2">UU ini membentuk KPK sebagai lembaga independen yang memiliki tugas pokok
        melakukan penyelidikan, penyidikan, penuntutan, dan pencegahan tindak pidana korupsi. KPK memiliki
        kewenangan yang luas dan diharapkan dapat beroperasi secara efektif dan independen.
        \n\nUntuk lebih lengkapnya kunjungi link berikut ini. <a href = "https://peraturan.bpk.go.id/Details/44493/uu-no-30-tahun-2002">UU No.30 Tahun 2002</a>
    </string>
    <string name="uu3">Undang-Undang Nomor 31 Tahun 1999 tentang Pemberantasan Tindak Pidana Korupsi</string>
    <string name="det_uu3">UU ini adalah undang-undang awal yang mengatur tentang pemberantasan tindak pidana
        korupsi di Indonesia. Undang-Undang ini kemudian mengalami perubahan melalui UU No. 20/2001.
        \n\nUntuk lebih lengkapnya kunjungi link berikut ini. <a href = "https://peraturan.bpk.go.id/Details/45350/uu-no-31-tahun-1999">UU No.31 Tahun 1999</a>
    </string>
    <string name="uu4">Undang-Undang Nomor 8 Tahun 2010 tentang Pencegahan dan Pemberantasan Tindak
        Pidana Pencucian Uang</string>
    <string name="det_uu4">Meskipun lebih berfokus pada pencucian uang, undang-undang ini juga memiliki
        kaitan dengan korupsi karena seringkali tindak pidana korupsi diikuti oleh upaya pencucian uang.
        UU ini memberikan dasar hukum untuk pencegahan dan pemberantasan pencucian uang.
        \n\nUntuk lebih lengkapnya kunjungi link berikut ini. <a href = "https://peraturan.bpk.go.id/Details/38547/uu-no-8-tahun-2010">UU No.8 Tahun 2010</a>
    </string>
    <string name="uu5">Undang-Undang Nomor 19 Tahun 2019 tentang Perubahan Atas Undang-Undang Nomor
        30 Tahun 2002 tentang Komisi Pemberantasan Tindak Pidana Korupsi</string>
    <string name="det_uu5">Undang-Undang ini mengalami perubahan terhadap UU KPK dan menimbulkan perdebatan
        di masyarakat karena dinilai mengurangi independensi KPK. Perubahan tersebut mencakup penyesuaian
        terhadap prosedur penyelidikan dan penyidikan, serta pengaturan terkait status pegawai KPK.
        \n\nUntuk lebih lengkapnya kunjungi link berikut ini. <a href = "https://peraturan.bpk.go.id/Details/122028/uu-no-19-tahun-2019">UU No.19 Tahun 2019</a>
    </string>
    <string name="uu6">Undang-Undang Nomor 28 Tahun 1999 tentang Penyelenggara Negara yang Bersih dan Bebas
        dari Korupsi, Kolusi, dan Nepotisme (KPKKN)</string>
    <string name="det_uu6">UU ini memberikan landasan bagi pemberantasan korupsi, kolusi, dan nepotisme dalam
        penyelenggaraan negara. Meskipun sebagian pasalnya telah dicabut, beberapa prinsipnya masih relevan.
        \n\nUntuk lebih lengkapnya kunjungi link berikut ini. <a href = "https://peraturan.bpk.go.id/Details/45345/uu-no-28-tahun-1999">UU No.28 Tahun 1999</a>
    </string>
    <string name="about">Tentang Aplikasi</string>
    <string name="title_activity_lokasi">Lokasi</string>
</resources>