<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KuisActivity">

    <LinearLayout
        android:layout_height="75dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/basic">

        <ImageView
            android:id="@+id/imageX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="14dp"
            android:src="@drawable/close"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/permainan"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        android:id="@+id/card_pilgan">

        <TextView
            android:id="@+id/pilgan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pilihan_ganda"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        android:id="@+id/card_tebakkata">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tebak_kata"
            android:id="@+id/tebakkata"
            android:padding="15dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>